--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,38 @@
 /*  your css code here. If applicable */
-body, h1, h2, h3, ul, li {
-    margin: 0;
-    padding: 0;
+.header{
+	width:100%;
+	background-color:#011e29;
+	color:white;
+	text-align:center;
+	padding:5px;
 }
-
-body {
-    background-color: #f5f5f5;
-    font-family: Arial, sans-serif;
+.body{
+	background-color: #f5f5f5;
+	text-align:center;
 }
-
-.header {
-    background-color: #011e29;
-    text-align: center;
-    padding: 20px;
-    color: white;
+.main1{
+	background-color: #f5f5f5;
+	display:flex;
+	color:black;
+	width:100%;
+	gap:10%
 }
-
-.latest-news-section {
-    background-color: #011e29;
-    padding: 20px;
-    width: 60%;
-    margin: 0 auto;
-    color: white;
+.latest-news-section{
+	background-color:white;
+	width:30%;
+	height:10%;
 }
-
-.latest-news-section h2 {
-    color: white;
+.pictorial-news-section{
+	background-color:white;
+	width:30%;
+	padding:20px;
+	text-align:center;
 }
-
-ul {
-    list-style-type: none;
+.pictorial-news-section > img{
+	width:150px;
 }
-
-ul li {
-    margin-bottom: 10px;
-}
-
-ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.pictorial-news-section {
-    background-color: #f5f5f5;
-    padding: 20px;
-    width: 60%;
-    margin: 0 auto;
-    text-align: center;
-    border-radius: 10px;
-}
-
-.pictorial-news-section h3 {
-    color: #011e29;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    margin: 10px;
+.main-section{
+	width:30%;
+	padding:10px;
+	background-color:white;
 }
